# rustneversleeps

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_EPIC.md  SECURITY.md
.github/workflows/: ci.yml
.specstory/history/: 2025-06-26_04-04-write-me-a-simple-ui-in-rust-to-interact-with-my-o.md
src/: lib.rs  main.rs
